@@ -47,6 +47,7 @@ Changelog
  * Fix: Restore custom "Date" icon for scheduled publishing panel in Edit page’s Settings tab (Helen Chapman)
  * Fix: Added missing form media to user edit form template (Matt Westcott)
  * Fix: Add a label to the modals’ “close” button for screen reader users (Helen Chapman, Katie Locke)
+ * Fix: Ensure the 'add child page' button displays when focused (Helen Chapman, Katie Locke)
 
 
 2.5.1 (07.05.2019)
